# kinematics5

./: .gitignore  LICENSE  README.md  setup.cfg
src/Kinematics/: OneD.py  test_OneD.py
src/kinematics5/: OneD.py
tests/: test_OneD.py
