[metadata]
name = kinematics5
version = 0.0.4
author = Mitchell_Daddario
author_email = mitchelldaddario@gmail.com
description = A package for solving 1D kinematics problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MED-1996/kinematics5
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src